clusters/east-ga-andrehe001-1001/imdb/imdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imdb
  namespace: imdb
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: imdb
