clusters/east-ga-andrehe001-1001/imdb/imdb/ingressHttp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imdb
  namespace: imdb
  annotations:
    kubernetes.io/ingress.class: contour
    ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: imdb
            port:
              number: 8080
